--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,16 +1,4 @@
-$iris-color: #5d5fef;
-$fuschia-color: #ef5da8;
-$point-color: #42567a;
-$border-1-color: #42567a20;
-$border-2-color: #42567a40;
-$border-3-color: #303e5860;
-$years-color: #3877ee;
-
-$breakpoint_xxl: 1200px;
-$breakpoint_xl: 1024px;
-$breakpoint_md: 767px;
-$breakpoint_xs: 576px;
-$breakpoint_xxs: 380px;
+@import 'shared/variables.scss';
 
 .container {
     margin: 0 8.3% 0 16.6%;
@@ -19,113 +7,13 @@ $breakpoint_xxs: 380px;
 .app {
     min-height: 100dvh;
     position: relative;
-    .bg {
-        display: grid;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-    }
 }
-
-.main {
-    border-left: $border-1-color solid 1px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 44.4% 1fr;
-    position: relative;
-    .child {
-        border-right: $border-1-color solid 1px;
-        border-bottom: $border-1-color solid 1px;
-    }
-    .circle {
-        position: absolute;
-        z-index: 1;
-        width: 534px;
-        height: 534px;
-        height: 534px;
-        border: $border-2-color solid 1px;
-        border-radius: 50%;
-        top: calc(44% - 267px);
-        left: calc(50% - 267px);
-        .circleRelative {
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            position: relative;
-            transition: 1.5s ease;
-            .point {
-                position: absolute;
-                width: 56px;
-                height: 56px;
-                background-color: #0000;
-                border-radius: 50%;
-                cursor: pointer;
-                transform-origin: center;
-                border: solid 1px #0000;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                transition: 0.3s ease;
-            }
-            .pointPoint {
-                content: '';
-                position: absolute;
-                border-radius: 50%;
-                width: 6px;
-                height: 6px;
-                background-color: $point-color;
-                opacity: 1;
-                transition: 0.5s ease;
-            }
-            .pointNum {
-                opacity: 0;
-                transition: 0.5s ease;
-                font-family: 'pt-sans';
-                font-size: 20px;
-            }
-            .point:hover {
-                background-color: var(--bg-color);
-                border: solid 1px $border-3-color;
-            }
-            .point:hover .pointNum {
-                opacity: 1;
-            }
-            .point:hover .pointPoint {
-                opacity: 0;
-                width: 56px;
-                height: 56px;
-                background-color: #0000;
-            }
-            .pointActive {
-                background-color: var(--bg-color);
-                border: solid 1px $border-3-color;
-            }
-            .pointPointActive {
-                opacity: 0;
-                width: 56px;
-                height: 56px;
-                background-color: #0000;
-            }
-            .pointNumActive {
-                opacity: 1;
-            }
-        }
-        .circleText {
-            width: 400px;
-            position: absolute;
-            top: 10px;
-            left: 450px;
-            font-size: 20px;
-        }
-    }
-}
-
 .title {
     font-size: 56px;
     padding-left: 78px;
     padding-top: 170px;
     position: relative;
+    transition: 1.5s ease;
 }
 .title::before {
     position: absolute;
@@ -136,124 +24,6 @@ $breakpoint_xxs: 380px;
     background: linear-gradient(to bottom, $iris-color, $fuschia-color);
     content: '';
 }
-.bigYears {
-    margin-top: 20px;
-    width: 100%;
-    display: flex;
-    gap: 100px;
-    justify-content: center;
-}
-.bigYear {
-    font-size: 200px;
-}
-.leftYear {
-    color: $iris-color;
-    transition: 1.5s ease;
-}
-.rightYear {
-    color: $fuschia-color;
-}
-
-.swipePeriod {
-    margin-left: 78px;
-    padding-top: 78px;
-}
-.swipePeriodText {
-    font-family: 'pt-sans';
-    font-size: 14px;
-}
-.swipePeriodButtons {
-    display: flex;
-    gap: 20px;
-}
-.swipePeriodButton {
-    position: relative;
-    z-index: 2;
-    background-color: #0000;
-    border: $border-3-color 1px solid;
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: linear 0.2s;
-    cursor: pointer;
-}
-.swipePeriodButton:disabled {
-    cursor: default;
-    opacity: 50%;
-    background-color: #0000;
-}
-.swipePeriodButton:hover {
-    background-color: white;
-}
-.swipePeriodImg {
-    width: 7px;
-}
-
-.factsContainer {
-    margin-top: 56px;
-    margin-left: 78px;
-    position: relative;
-}
-
-.facts {
-    overflow: hidden;
-    display: flex;
-    gap: 80px;
-    scroll-snap-type: x mandatory;
-}
-.fact {
-    flex-shrink: 0;
-    scroll-snap-align: start;
-}
-.factYear {
-    font-family: 'bebas-nueue';
-    font-size: 25px;
-    color: $years-color;
-    margin-bottom: 15px;
-}
-.factText {
-    font-family: 'pt-sans';
-    font-size: 20px;
-}
-
-.factsButton {
-    position: absolute;
-    width: 40px;
-    align-items: center;
-    cursor: pointer;
-    z-index: 2;
-}
-.factsButton:disabled {
-    cursor: default;
-    opacity: 0;
-}
-.factsButtonLeft {
-    top: 20px;
-    border: none;
-    left: -50px;
-    height: 40px;
-    background-color: white;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-}
-.factsButtonRight {
-    top: 20px;
-    border: none;
-    right: 40px;
-    height: 40px;
-    background-color: white;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-}
-.factsButtonImg {
-    width: 7px;
-}
-
 .line {
     margin-top: 20px;
     background-color: $border-3-color;
@@ -263,31 +33,7 @@ $breakpoint_xxs: 380px;
     margin-top: 15dvh;
     font-size: 14px;
 }
-.mobilePagination {
-    position: absolute;
-    bottom: 5%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.mobilePaginationPoints {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 10px;
-}
-.mobilePaginationPoint {
-    padding: 0;
-    border: none;
-    width: 6px;
-    height: 6px;
-    border-radius: 50%;
-    background-color: $border-2-color;
-}
-.mobilePaginationPointActive {
-    background-color: $point-color;
-}
+
 @media (min-width: $breakpoint_xxl) {
     .line {
         display: none;
@@ -295,14 +41,8 @@ $breakpoint_xxs: 380px;
     .lineText {
         display: none;
     }
-    .mobilePagination {
-        display: none;
-    }
 }
 @media (max-width: $breakpoint_xxl) {
-    .main {
-        display: none;
-    }
     .title {
         padding-top: 59px;
         padding-left: 0px;
@@ -314,74 +54,18 @@ $breakpoint_xxs: 380px;
     .container {
         margin: 0 5% 0 5%;
     }
-    .bigYear {
-        font-size: 150px;
-    }
-    .swipePeriod {
-        position: absolute;
-        margin-left: 0px;
-        padding-top: 0px;
-        bottom: 5%;
-    }
-    .factsButton {
-        display: none;
-    }
-    .factsContainer {
-        margin-top: 5dvh;
-        margin-left: 0px;
-        position: relative;
-    }
-    .swipePeriodButtons {
-        gap: 18px;
-    }
-    .swipePeriodButton {
-        height: 45px;
-        width: 45px;
-    }
 }
 @media (max-width: $breakpoint_xl) {
     .title {
         font-size: 45px;
-    }
-    .bigYear {
-        font-size: 120px;
-    }
-    .factText {
-        font-size: 18px;
-    }
-    .swipePeriodButtons {
-        gap: 16px;
-    }
-    .swipePeriodButton {
-        height: 35px;
-        width: 35px;
     }
 }
 @media (max-width: $breakpoint_md) {
     .title {
         font-size: 40px;
     }
-    .bigYears {
-        gap: 50px;
-    }
-    .bigYear {
-        font-size: 100px;
-    }
-    .factText {
-        font-size: 18px;
-    }
-    .swipePeriodButtons {
-        gap: 16px;
-    }
-    .swipePeriodButton {
-        height: 35px;
-        width: 35px;
-    }
 }
 @media (max-height: $breakpoint_md) {
-    .main {
-        display: none;
-    }
     .title {
         padding-top: 59px;
         padding-left: 0px;
@@ -393,56 +77,10 @@ $breakpoint_xxs: 380px;
     .container {
         margin: 0 5% 0 5%;
     }
-    .bigYears {
-        gap: 30px;
-    }
-    .bigYear {
-        font-size: 80px;
-    }
-    .swipePeriod {
-        position: absolute;
-        margin-left: 0px;
-        padding-top: 0px;
-        bottom: 13px;
-    }
-    .factsButton {
-        display: none;
-    }
-    .factsContainer {
-        margin-top: 5dvh;
-        margin-left: 0px;
-        position: relative;
-    }
-    .factText {
-        font-size: 16px;
-    }
-    .swipePeriodButtons {
-        gap: 12px;
-    }
-    .swipePeriodButton {
-        height: 30px;
-        width: 30px;
-    }
 }
 @media (max-width: $breakpoint_xs) {
     .title {
         font-size: 30px;
-    }
-    .bigYears {
-        gap: 30px;
-    }
-    .bigYear {
-        font-size: 80px;
-    }
-    .factText {
-        font-size: 16px;
-    }
-    .swipePeriodButtons {
-        gap: 12px;
-    }
-    .swipePeriodButton {
-        height: 30px;
-        width: 30px;
     }
 }
 
@@ -450,42 +88,10 @@ $breakpoint_xxs: 380px;
     .title {
         font-size: 20px;
     }
-    .bigYears {
-        gap: 20px;
-    }
-    .bigYear {
-        font-size: 56px;
-    }
-    .factText {
-        font-size: 14px;
-    }
-    .swipePeriodButtons {
-        gap: 8px;
-    }
-    .swipePeriodButton {
-        height: 25px;
-        width: 25px;
-    }
 }
 
 @media (max-width: $breakpoint_xxs) {
     .title {
         font-size: 20px;
-    }
-    .bigYears {
-        gap: 20px;
-    }
-    .bigYear {
-        font-size: 56px;
-    }
-    .factText {
-        font-size: 14px;
-    }
-    .swipePeriodButtons {
-        gap: 8px;
-    }
-    .swipePeriodButton {
-        height: 25px;
-        width: 25px;
     }
 }
