--- a/src/components/background/Background.module.scss
+++ b/src/components/background/Background.module.scss
@@ -7,6 +7,10 @@
     height: 100%;
     top: 0;
 
+    .container {
+        margin: 0 8.3% 0 16.6%;
+    }
+
     .bg {
         border-left: $border-1-color solid 1px;
         display: grid;
