--- a/src/components/change-period/ChangePeriod.module.scss
+++ b/src/components/change-period/ChangePeriod.module.scss
@@ -5,7 +5,7 @@
     padding-top: 78px;
 
     .swipePeriodText {
-        font-family: 'pt-sans';
+        font-family: 'pt-sans', serif;
         font-size: 14px;
     }
 
